--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <head>
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width">
-   <title>Lê Chấn Nam</title>
+   <title>Linh Thị Thanh Trúc</title></title>
    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
 
