--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           href="contents/tkb.html"target="ndung">Thời khoá biểu</a>
       
         <a
-          href="contents/khoahocmaytinh.html"target="ndung">khoa hoc may tinh</a>
+          href="contents/khmt.html"target="ndung">khoa hoc may tinh</a>
         <a
           href="contents/huongnghiep.html"target="ndung">Huong nghiep</a>
   </div>
